JumpScript/tests/baselines/reference/parserNoASIOnCallAfterFunctionExpression1.errors.txt
tests/cases/conformance/parser/ecmascript5/parserNoASIOnCallAfterFunctionExpression1.jump(1,9): error TS2554: Expected 0 arguments, but got 1.
tests/cases/conformance/parser/ecmascript5/parserNoASIOnCallAfterFunctionExpression1.jump(2,7): error TS2304: Cannot find name 'window'.


==== tests/cases/conformance/parser/ecmascript5/parserNoASIOnCallAfterFunctionExpression1.jump (2 errors) ====
    var x = function () { }
            ~~~~~~~~~~~~~~~
    (<any>window).foo;
    ~~~~~~~~~~~~~
!!! error TS2554: Expected 0 arguments, but got 1.
          ~~~~~~
!!! error TS2304: Cannot find name 'window'.
    